[package]
name = "raydium-contract-instructions"
version = "0.1.0"
edition = "2021"


[dependencies]
solana-program = "1.17.20"
spl-token = { version = "4.0.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "2.3.0", features = [
    "no-entrypoint",
] }
thiserror = "1.0.20"
ahash = "*"
